--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "dotenv": "^16.5.0",
     "embla-carousel-autoplay": "^8.1.1",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^11.9.1",
+    "firebase": "^10.12.2",
+    "firebase-admin": "^12.1.1",
     "genkit": "^1.14.1",
     "jose": "^5.4.1",
     "lucide-react": "^0.475.0",
